Started WTA parser