@@ -3,8 +3,10 @@ package dev.xfj;
 import dev.xfj.extracting.DATExtractor;
 import dev.xfj.format.dat.DATFile;
 import dev.xfj.parsing.DATParser;
+import dev.xfj.parsing.WTAParser;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class Application {
     public Application() {
@@ -12,15 +14,21 @@ public class Application {
     }
 
     public void run() {
-        parseAndExtract(Path.of("pl010d.dat"));
-        parseAndExtract(Path.of("pl010d.dtt"), false);
+        //parseAndExtractDAT(Path.of("pl010d.dat"));
+        //parseAndExtractDAT(Path.of("pl010d.dtt"), false);
+        try {
+            WTAParser wtaParser = new WTAParser(Paths.get("pl010d", "[976] pl010d.wta"));
+            wtaParser.parse();
+        } catch (Exception e) {
+            throw new RuntimeException(e.getMessage());
+        }
     }
 
-    public void parseAndExtract(Path path) {
-        parseAndExtract(path, true);
+    public void parseAndExtractDAT(Path path) {
+        parseAndExtractDAT(path, true);
     }
 
-    public void parseAndExtract(Path path, boolean delete) {
+    public void parseAndExtractDAT(Path path, boolean delete) {
         try {
             DATParser datParser = new DATParser(path);
             DATFile datFile = datParser.parse();
